# osm_extract_polygon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: branch-verify.yml  create-tag.yml  release.yml
src/: converter.rs  file_creation_handler.rs  main.rs  osm_reader.rs  poly_writer.rs  utils.rs  writer.rs
src/output/: file_creator.rs  file_writer_geojson.rs  file_writer_poly.rs  mod.rs  output_handler.rs  writer.rs  writer_geojson.rs  writer_poly.rs
