[package]
name = "osm_extract_polygon"
version = "0.5.8"
authors = ["Andreas <andreas.gemsa@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5.18", features=["cargo"] }
geojson = { version =  "0.24.1", features=["geo-types"] }
geo-types = "0.7.13"
osmpbfreader = "0.16.1"
serde_json = "1.0.128"
smartstring = { version = "1.0.1", features = ["proptest", "serde"] }

[build-dependencies]
protobuf-codegen-pure = "2"
